maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:6: error: not found: value keepSideOnWall
 keepSideOnWall()
 ^